# Song-mashup-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: default.yaml
data/: mashup_pairs.csv
data/example_inputs/: README.txt
scripts/: batch_evaluate.py  run_mashup.py
src/mashup/: __init__.py  assembly.py  cli.py  download.py  evaluation.py  features.py  scoring.py  separation.py  structure.py  utils.py
tests/: test_cli_smoke.py  test_imports.py  test_package.py
